; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_cgroup.c_init_cgroup_housekeeping.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_cgroup.c_init_cgroup_housekeeping.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cgroup = type { i32, i32, i32, i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cgroup*)* @init_cgroup_housekeeping to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_cgroup_housekeeping(%struct.cgroup* %0) #0 {
  %2 = alloca %struct.cgroup*, align 8
  store %struct.cgroup* %0, %struct.cgroup** %2, align 8
  %3 = load %struct.cgroup*, %struct.cgroup** %2, align 8
  %4 = getelementptr inbounds %struct.cgroup, %struct.cgroup* %3, i32 0, i32 7
  %5 = call i32 @INIT_LIST_HEAD(i32* %4)
  %6 = load %struct.cgroup*, %struct.cgroup** %2, align 8
  %7 = getelementptr inbounds %struct.cgroup, %struct.cgroup* %6, i32 0, i32 6
  %8 = call i32 @INIT_LIST_HEAD(i32* %7)
  %9 = load %struct.cgroup*, %struct.cgroup** %2, align 8
  %10 = getelementptr inbounds %struct.cgroup, %struct.cgroup* %9, i32 0, i32 5
  %11 = call i32 @INIT_LIST_HEAD(i32* %10)
  %12 = load %struct.cgroup*, %struct.cgroup** %2, align 8
  %13 = getelementptr inbounds %struct.cgroup, %struct.cgroup* %12, i32 0, i32 4
  %14 = call i32 @INIT_LIST_HEAD(i32* %13)
  %15 = load %struct.cgroup*, %struct.cgroup** %2, align 8
  %16 = getelementptr inbounds %struct.cgroup, %struct.cgroup* %15, i32 0, i32 3
  %17 = call i32 @INIT_LIST_HEAD(i32* %16)
  %18 = load %struct.cgroup*, %struct.cgroup** %2, align 8
  %19 = getelementptr inbounds %struct.cgroup, %struct.cgroup* %18, i32 0, i32 2
  %20 = call i32 @mutex_init(i32* %19)
  %21 = load %struct.cgroup*, %struct.cgroup** %2, align 8
  %22 = getelementptr inbounds %struct.cgroup, %struct.cgroup* %21, i32 0, i32 1
  %23 = call i32 @INIT_LIST_HEAD(i32* %22)
  %24 = load %struct.cgroup*, %struct.cgroup** %2, align 8
  %25 = getelementptr inbounds %struct.cgroup, %struct.cgroup* %24, i32 0, i32 0
  %26 = call i32 @spin_lock_init(i32* %25)
  ret void
}

declare dso_local i32 @INIT_LIST_HEAD(i32*) #1

declare dso_local i32 @mutex_init(i32*) #1

declare dso_local i32 @spin_lock_init(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
